--- a/css/styles.css
+++ b/css/styles.css
@@ -703,7 +703,7 @@ header {
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 100vh;
+    height: auto;
     min-height: 700px;
     margin: 0;
     padding: 0;
@@ -883,7 +883,7 @@ header {
     color: white;
     position: relative;
     overflow: hidden;
-    margin-top: 0;
+    margin: 0;
 }
 
 .categories-container {
